fracking: WIP adding "show key" to every graph

--- a/fracking/fracking-1.html
+++ b/fracking/fracking-1.html
@@ -64,7 +64,9 @@
       </div>
     </div>
     <div id='output-graphs'>
-      <div id='output-graph' class="graph"></div>
+      <div id='output-graph' class="graph">
+        <a href="#" class="show-key">show key</a>
+      </div>
     </div>
     <script>
       var modelReady = false, controls = null;
