--- a/fracking/fracking-3.html
+++ b/fracking/fracking-3.html
@@ -64,8 +64,12 @@
       </div>
     </div>
     <div id='output-graphs'>
-      <div id='output-graph' class="graph"></div>
-      <div id='contaminant-graph' class="graph"></div>
+      <div id='output-graph' class="graph">
+        <a href="#" class="show-key">show key</a>
+      </div>
+      <div id='contaminant-graph' class="graph">
+        <a href="#" class="show-key">show key</a>
+      </div>
     </div>
     <script>
       var modelReady = false, controls = null;
