--- a/fracking/fracking-2.html
+++ b/fracking/fracking-2.html
@@ -64,9 +64,7 @@
       </div>
     </div>
     <div id='output-graphs'>
-      <div id='output-graph' class="graph">
-        <a href="#" class="show-key">show key</a>
-      </div>
+      <div id='output-graph' class="graph"></div>
     </div>
     <script>
       var modelReady = false, controls = null;
